fixed overlapping issue sliding navbar

--- a/src/Styles/Sidebar.css
+++ b/src/Styles/Sidebar.css
@@ -20,4 +20,7 @@
 #TrialSideBar
 {
     display: none;
+    width: 100%;
+ 
+    color: firebrick;
 }
